add: foi criado a tela de ordem de cartas e de configurações e foi adicionado o som ao clicar na imagem do pato no modal, falta ajustar os confetes na tela da home

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   audioplayers: ^6.1.0
   flutter_modular: ^6.3.4
   playing_cards: ^0.4.1+11
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
