--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_modular: ^6.3.4
   playing_cards: ^0.4.1+11
   confetti: ^0.8.0
+  wakelock_plus: ^1.2.8
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
